kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivolve-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ivolve-app
  template:
    metadata:
      labels:
        app: ivolve-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ivolve-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: ivolve-app
          image: 093796421953.dkr.ecr.us-east-1.amazonaws.com/ivolve-app:17
          ports:
            - containerPort: 5000
