kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ivolve-app-service
  namespace: ivolve
spec:
  selector:
    app: ivolve-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
